--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body{
-    background-color: aquamarine;
+    background-color: rgb(119, 0, 255);
 
     p{
         font-family: 'Courier New', Courier, monospace;
         font-size: 15px;
         background-image: linear-gradient(aquamarine,rgb(101, 207, 233));
+    }
+
+    h1{
+       color: aliceblue; 
     }
 }
